# ITRI-GraspGen

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GG_demo_scene_pc.py  GraspGen_demo_scene_pc.py  Installation_Guide.md  LICENSE  NOTICE.md  README.md  clean_output.sh  deprecated_main_realsense.py  download_models.sh  gripper.py  main.py  main_zed.py  manual_PC_transform.py  new_main.py  pyproject.toml  quick_grip.py  run_realsense_SAM2_scene.py  simple_euler_quaternion_transform_demo.py  simple_euler_quaternion_transform_test.py  workflow.sh
.github/workflows/: on_pull_request.yaml  on_push_and_pull_request.yaml
Plans/: Immitate FetchBenchs Experiments.md
PointCloud_Generation/: PC_transform.py  __init__.py  grounding_dino_utils.py  mouse_handler.py  mouse_handlerv2.py  pointcloud_generation.py  sample_validation.py  stereo_utils.py  visualization.py  zed_utils.py
PointCloud_Generation/transform_config/: sim1.json  vid1.json  vid2.json
ROS2_server/: Rtest_gripper_server_dup.py  dummy_gripper_server.py  dummy_gripper_server_with_fail.py  gripper_server.py  gripper_server_only_sim.py  send_traj_socket.py  socket_communication.py  try_gripper_server.py
actions/: Grab_and_Place.json  Grasp_and_Dump.json  Open_Lid.json  actions0.json  actions1.json  actions10.json  actions11.json  actions12.json  actions13.json  actions2.json  actions3.json  actions4.json  actions5.json  actions6.json  actions7.json  actions8.json  actions9.json  actions_bad.json  blockage.json  bluecup.json  demo.json  drop_waffle.csv  extra_obstacles.json  get_spoon.csv  go_to_default.csv  movejoint.json
analysis/: analyze_grasps.py
common_utils/: actions_format_checker.py  common_utils.py  config.py  csv_moves.py  csv_traj_handler.py  grasp_data_format.py  graspgen_utils.py  gripper_utils.py  movesets.py  network_config.py  order_task_config.py  port_config.py  qualification.py  quick_grip.py  quick_grip2.py  socket_communication.py  workflow_control.py
configs/actions/: Grasp_and_Dump.json  extra_obstacles.json
data/calibrate/output_transform_config/: README.md
data/order_experiment_data/in_basket/task_config/: 1.json  2.json  3.json  4.json  5.json
data/order_experiment_data/on_shelf/task_config/: 1.json  2.json  3.json  4.json  5.json
data/order_experiment_data/on_table/task_config/: 1.json  2.json  3.json  4.json  5.json
data/zed_images/4/: zed_info.json
data/zed_images/6/: zed_info.json
data/zed_images/demo1/: zed_info.json
data/zed_images/demo8/: zed_info.json
data/zed_images/straight_cups/: zed_info.json
data_for_test/: experiment_scenario_1.json  experiment_scenario_2.json
data_for_test/fullact/: fullact20251104_201051.json  fullact20251124_153726.json  fullact20251201_210052.json  fullact_20251104_201025.json  fullact_20251104_201025_walltest.json  fullact_20251104_201027.json  fullact_20251124_153709.json  fullact_20251124_153711.json  fullact_20251201_210039.json  fullact_20251201_210042.json  fullact_20251201_210050.json  green_cup_to_pan.json
data_for_test/obstacle/: obstacle20251127_093021.json
isaac-sim2real/: README.md  calculate_motion_from_data.py  experiment_isaacsim.py  plan_for_calculate_motion_from_data.md  sync_with_ROS2.py  tm5s.urdf  tm5s.yml
isaac-sim2real/isaacsim_utils/: data_types.py  isaacsim_control.py  motion_plan_control.py  network_config.py  port_config.py  send_traj_socket.py  socket_communication.py
models/: Download_models_guide.md
sample_data/zed_images/4/: zed_info.json
sample_data/zed_images/5/: zed_info.json
sample_data/zed_images/demo3/: zed_info.json
sample_data/zed_images/plastic_bottle/: zed_info.json
sample_data/zed_images/straight_cups/: zed_info.json
scripts/: GD_main.py  create_experiment_scenes.py  experiment_graspgen.py  experiment_isaacsim.py  grasp_data_gen.py  grounding_dino_main.py  groundino_main.py  main.py  mia_server.py  multiple_main.py  new_main.py  new_mia_server.py  new_workflow_with_isaacsim.py  obstacle_picker.py  run_pointcloud_generation.py  simple_server_for_Mia.py  snack_graspgen_server.py  test_GroundingDINO.py  test_grounding_dino_with_validation.py  visualize_grasp_data.py  workflow_with_gui.py  workflow_with_isaacsim.py  zed_images_capture.py
scripts/calibrate/: main_zed.py  manual_PC_transform.py  run_pointcloud_generation.py
scripts/legacy/: GD_main.py  README.md  grounding_dino_main.py
src/: config.py  mouse_handler.py  pointcloud_utils.py  realsense_utils.py  sam_utils.py  stereo_utils.py  stereo_utils2.py  usage_utils.py  visualization.py  zed_utils.py
src/PointCloud_Generation/: PC_transform.py  pointcloud_generation.py  sam_utils.py  visualization.py  zed_utils.py
src/PointCloud_Generation/transform_config/: sim2.json
src/common_utils/: __init__.py  actions_format_checker.py  common_utils.py  config.py  csv_traj_handler.py  custom_logger.py  grasp_data_format.py  graspgen_utils.py  gripper_utils.py  log_formatter.py  movesets.py  network_config.py  order_task_config.py  qualification.py  quick_grip.py  quick_grip2.py  scene_data.py  socket_communication.py  usage_utils.py  workflow_control.py
src/pointcloud_generation/: PC_transform.py  __init__.py  grounding_dino_utils.py  mouse_handlerv2.py  pc_transform.py  pointcloud_generation.py  sam_utils.py  stereo_utils.py  visualization.py  yolo_inference.py  zed_utils.py
test_tool_for_isaacsim/: simple_send.py
tests/: __init__.py  test_actions_format_checker.py  test_graspgen_utils.py  test_mouse_handler.py  test_order_test_config.py  test_pointcloud_generation.py  test_socket_communication.py
tests/test_isaacsim/: README.md  isaac_test_delayed_moves.py  simple_send.py
