# referenced from https://github.com/AUTOMATIC1111/stable-diffusion-webui/blob/82a973c04367123ae98bd9abdf80d9eda9b910e2/pyproject.toml


[project]
name = "ITRI-GraspGen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "pip",
    "pyrealsense2",
    "ultralytics",
    "pye57",
    "ruff",
    "flash-attn",
    "matplotlib>=3.9.1",
    "jupyter>=1.0.0",
    "opencv-python>=4.7.0",
    "eva-decord>=0.6.1",
    "pyzed @ https://download.stereolabs.com/zedsdk/5.0/whl/linux_x86_64/pyzed-5.0-cp311-cp311-linux_x86_64.whl",
    "seaborn",
    "torch_scatter",
    "sam-2",
    "groundingdino",
    "grasp_gen",
    "pointnet2_ops",
    "foundation_stereo",
    "cython>=3.2.0",
    "numpy>=2.3.4",
    "gitpython>=3.1.45",
    "PyOpenGL-accelerate",
    "pyside6>=6.10.1",
    "pyserial>=3.5",
    "spconv-cu121>=2.3.8",
    "xgboost>=3.2.0",
    "open3d>=0.19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pydoclint>=0.8.3",
    "pyright>=1.1.409",
    ## pyyaml and lark will be needed if ros humble is installed
    "pyyaml>=6.0.3",
    "lark>=1.3.1",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["pointcloud_generation", "common_utils"]


[tool.uv]
override-dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "numpy>=2.3.4",
    "pickle5; python_version < '3.8'", # Do not install pickle 5 unless python version < 3.8, which isn't actually possible.
    "spconv-cu120; python_version < '3.8'", # Use spconv-cu121 instead
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
sam-2 = { path = "./third_party/sam2", editable = false }
groundingdino = { path = "./third_party/GroundingDINO", editable = true }
grasp_gen = { path = "./third_party/GraspGen", editable = true }
pointnet2_ops = { path = "./third_party/GraspGen/pointnet2_ops", editable = true }
foundation_stereo = { path = "./third_party/FoundationStereo", editable = true }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.5.1"]
groundingdino = ["torch==2.5.1"]
pointnet2_ops = ["torch==2.5.1"]
torch-scatter = ["torch==2.5.1"]
torch-cluster = ["torch==2.5.1"]

[project.optional-dependencies]
localextras = ["pyzed"] # this doesn't work at all.

[tool.ruff]
exclude = [
    "third_party",
    "isaac-sim2real/isaacsim_utils/helper.py"
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "ANN",  # flake8-annotations
    "D",    # pydocstyle
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
]
ignore = [
    "D107",  # pydoclint requires __init__ args in class docstring instead
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.pydoclint]
style = "google"
exclude = '\.git|\.tox|\.venv|third_party|isaac-sim2real/isaacsim_utils/helper\.py'
skip-checking-short-docstrings = false


[tool.pyright]
extraPaths = ["src", "third_party/GraspGen", "third_party/GroundingDINO", "third_party/FoundationStereo/src"] # Without this, pyright can't find these editable-installed package even though it works well at runtime.
include = ["src", "scripts", "tests", "analysis"]
exclude = ["third_party", "isaac-sim2real", "ROS2_server"]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Importing from timm.models.layers is deprecated:FutureWarning",
    "ignore:zmq.eventloop.ioloop is deprecated in pyzmq 17:Warning:meshcat.servers.zmqserver",
    "ignore:'locale.getdefaultlocale' is deprecated:Warning:ccimport.buildtools.writer",
    # FoundationStereo Warnings
    "ignore:xFormers is not available:UserWarning",
    "ignore:torch.meshgrid.*indexing:UserWarning",
    "ignore:You are using `torch.load` with `weights_only=False`:FutureWarning",
    "ignore:The `device` argument is deprecated:FutureWarning",
    "ignore:torch.utils.checkpoint.*use_reentrant:UserWarning",
    "ignore:None of the inputs have requires_grad=True:UserWarning",
    "ignore:`torch.cuda.amp.autocast\\(args...\\)` is deprecated:FutureWarning",
]
